--- a/xmrig/Dockerfile
+++ b/xmrig/Dockerfile
@@ -26,4 +26,6 @@ RUN apk add --no-cache --virtual .build-deps \
 
 COPY docker-entrypoint.sh /usr/local/bin/
 
+RUN chmod +x /usr/local/bin/docker-entrypoint.sh
+
 ENTRYPOINT ["docker-entrypoint.sh"]
